--- a/daolaji.html
+++ b/daolaji.html
@@ -74,5 +74,6 @@
         document.getElementById('result').innerText = getDutyMemberToday();
         document.getElementById('nextDuty').innerText = getNextDutyMember();
     </script>
+    <a href="by.html">不要点我</a>
 </body>
 </html>
