--- a/1.html
+++ b/1.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-<a href="1.html">这是我们之间的小密码哦</a>
+    <a href="2.html">秘密就是</a>
 </body>
 </html>
