--- a/by.html
+++ b/by.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="da.html">吊毛让你不要点啊</a>
+    <a href="da.html">你不能让别人知道哦</a>
 </body>
 </html>
