--- a/daolaji.html
+++ b/daolaji.html
@@ -74,6 +74,6 @@
         document.getElementById('result').innerText = getDutyMemberToday();
         document.getElementById('nextDuty').innerText = getNextDutyMember();
     </script>
-    <a href="by.html">不要点我</a>
+    <a href="by.html">想知道我的小秘密吗？</a>
 </body>
 </html>
